--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 * {
    box-sizing: border-box;
 }
-html{
+html {
    scroll-behavior: smooth;
 }
 body {
@@ -16,7 +16,7 @@ ul {
 }
 a {
    text-decoration: none;
-   color:inherit;
+   color: inherit;
 }
 button {
    padding: 10px 15px;
@@ -200,7 +200,7 @@ header nav ul li {
    /* The height is 400 pixels */
    width: 100%;
    /* The width is the width of the web page */
- }
+}
 .contato {
    padding: 60px;
    background: rgba(245, 245, 245, 245);
@@ -213,24 +213,24 @@ header nav ul li {
    border-radius: 8px;
    background: white;
    text-align: center;
-   
+
    position: absolute;
    z-index: 99;
-   
+
    top: calc(50% - 150px);
    left: calc(20% - 150px);
-  
+
    display: flex;
    flex-direction: column;
    justify-content: center;
-   box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
-.contato .contato-card h1  {
+.contato .contato-card h1 {
    padding-left: 50px;
    text-align: left;
 }
-.contato .contato-card li  {
-   font-size: .8rem;
+.contato .contato-card li {
+   font-size: 0.8rem;
    color: gray;
    font-weight: bold;
    display: flex;
@@ -239,23 +239,20 @@ header nav ul li {
 .contato .contato-card li svg {
    width: 16px;
    margin: 10px;
-
 }
 
-
-
- /* Responsividade */
+/* Responsividade */
 /* Small devices (landscape phones, 576px and up)*/
 @media (max-width: 950px) {
    .contato {
-      padding: 60px 0 ;
+      padding: 60px 0;
    }
-   .contato .contato-card{
-       left: 40px;
-    }
+   .contato .contato-card {
+      left: 40px;
+   }
 }
 @media (max-width: 800px) {
-    .contato {
+   .contato {
       padding: 30px 0;
    }
    .contato .contato-card {
@@ -266,6 +263,32 @@ header nav ul li {
 @media (max-width: 767px) {
 }
 @media (max-width: 480px) {
+   body {
+      margin-bottom: 55px;
+   }
+   header nav ul {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      padding: 0;
+      margin: 0;
+      z-index: 99;
+
+      background: #000000;
+      color: white;
+      font-weight: bold;
+      height: 55px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+   }
+   header nav p {
+      width: 100px;
+      text-align: center;
+   }
+}
+@media (max-width: 375px) {
    body {
       margin-bottom: 55px;
    }
